unpackaged/main/default/objects/CZ_Check_Payment__e/CZ_Check_Payment__e.object-meta.xml
<CustomObject>
    <label>CZ Check Payment</label>
    <pluralLabel>CZ Check Payments</pluralLabel>
</CustomObject>