unpackaged/main/default/objects/CZ_Check_Payment__e/fields/checkNumber__c.field-meta.xml
<CustomField>
    <fullName>checkNumber__c</fullName>
    <label>checkNumber</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>