unpackaged/main/default/objects/CZ_Check_Payment__e/fields/invoiceId__c.field-meta.xml
<CustomField>
    <fullName>invoiceId__c</fullName>
    <label>invoiceId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>