unpackaged/main/default/objects/CZ_Check_Payment__e/fields/payAmount__c.field-meta.xml
<CustomField>
    <fullName>payAmount__c</fullName>
    <label>payAmount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>