unpackaged/main/default/objects/CZ_Check_Payment__e/fields/paymentDate__c.field-meta.xml
<CustomField>
    <fullName>paymentDate__c</fullName>
    <label>paymentDate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>