unpackaged/main/default/objects/CZ_Check_Payment__e/fields/tliId__c.field-meta.xml
<CustomField>
    <fullName>tliId__c</fullName>
    <label>tliId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>